refactor: switch文などを修正